Fixing the overflow of the widget content.
A big widget was screwing up the whole layout. Now the widget
content div will not show more than 200px of height and overflow
is auto which means that a scroll bar will be shown if plugin
needs more space.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -57,9 +57,9 @@ div#top { border-bottom: solid 2px #babdb6; }
 /* Widgets container */
 #widgetsArea li { display: block; float: left; width: 380px; }
 
-.widget { border: solid 1px #ad7fa8; -moz-border-radius: 4px;
-          -webkit-border-radius: 4px; border-radius: 4px; color: #5c3566;
-          margin: 0 20px 20px 0; }
+.widget { border: solid 1px #ad7fa8; color: #5c3566;
+          margin: 0 20px 20px 0; -moz-border-radius: 4px;
+          -webkit-border-radius: 4px; border-radius: 4px; }
 
 .widget .title { float: left; }
 .widget .header { color: #5c3566; margin: 6px 6px 0 6px;
@@ -67,7 +67,7 @@ div#top { border-bottom: solid 2px #babdb6; }
 .widget .controls { float: right; width: 100px; text-align: right; }
 #widgetsArea .widget .controls li { display: inline; float: none;
                                     width: auto; }
-.widget .content { padding: 6px; }
+.widget .content { padding: 6px; overflow: auto; max-height: 200px; }
 
 /* Footer appearance */
 #footer { margin-top: 20px; background: #ad7fa8;
